@@ -55,16 +55,21 @@
 #include <netinet/in.h>
 
 char *
+inet_ntoa_r(struct in_addr ina, char *buf)
+{
+    unsigned char *ucp = (unsigned char *)&ina;
+    diag_sprintf(buf, "%d.%d.%d.%d",
+                 ucp[0] & 0xff,
+                 ucp[1] & 0xff,
+                 ucp[2] & 0xff,
+                 ucp[3] & 0xff);
+    return buf;
+}
+
+char *
 inet_ntoa(struct in_addr ina)
 {
-	static char buf[4*sizeof "123"];
-	unsigned char *ucp = (unsigned char *)&ina;
-
-	diag_sprintf(buf, "%d.%d.%d.%d",
-                     ucp[0] & 0xff,
-                     ucp[1] & 0xff,
-                     ucp[2] & 0xff,
-                     ucp[3] & 0xff);
-	return buf;
+    static char buf[sizeof "123.456.789.012"];
+    return inet_ntoa_r(ina, buf);
 }
 
